deps/v8/test/message/strict-octal-string.out
*%(basename)s:32: SyntaxError: Octal literals are not allowed in strict mode.
  var x = "hello\040world";
                 ^^
SyntaxError: Octal literals are not allowed in strict mode.
